--- a/EcardQuery/RealtimeInquiryPage.xaml
+++ b/EcardQuery/RealtimeInquiryPage.xaml
@@ -5,6 +5,7 @@
     xmlns:local="using:EcardQuery"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ad="using:Microsoft.Advertising.WinRT.UI"
     mc:Ignorable="d">
     
     <Page.Transitions>
@@ -55,8 +56,9 @@
             <ComboBox x:Name="accountPicker" ItemsSource="{Binding}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.ColumnSpan="2" Margin="8" Grid.Row="1" />
             <Button x:Name="submitButton" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Row="2" Content="查询" Grid.ColumnSpan="2" Margin="8" Click="submitButton_Click" />
             <TextBlock x:Name="statusBlock" Grid.Row="3" Grid.ColumnSpan="2" Margin="12,12,12,12" />
+            <ad:AdControl Grid.Row="4" Grid.ColumnSpan="2" VerticalAlignment="Center" AdUnitId="11554056" ApplicationId="debec3ba-2069-4791-9fd9-fe0a1e117e8f" Width="300" Height="250" HorizontalAlignment="Center" />
         </Grid>
-        <local:TranscationDisplayList x:Name="displayList" Grid.Column="1" Visibility="Collapsed" />
+        <local:TranscationDisplayList x:Name="displayList" Grid.Column="1" Visibility="Collapsed" Grid.Row="5" />
         <ProgressRing x:Name="progressRing" HorizontalAlignment="Center" VerticalAlignment="Center" Width="50" Height="50" Grid.ColumnSpan="2"/>
     </Grid>
 </Page>
