--- a/EcardQuery/MainPage.xaml
+++ b/EcardQuery/MainPage.xaml
@@ -32,11 +32,14 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <TextBox x:Name="userNameBox" PlaceholderText="学号" Grid.ColumnSpan="2" Margin="8" KeyUp="userNameBox_KeyUp"/>
-            <PasswordBox x:Name="passwdBox" Grid.Row="1" Grid.ColumnSpan="2" Margin="8" PlaceholderText="密码" KeyUp="passwdBox_KeyUp"/>
+            <TextBox x:Name="userNameBox" PlaceholderText="学号" Grid.ColumnSpan="2" Margin="8" KeyUp="userNameBox_KeyUp" TextChanged="userNameBox_TextChanged"/>
+            <PasswordBox x:Name="passwdBox" Grid.Row="1" Grid.ColumnSpan="2" Margin="8" PlaceholderText="密码" KeyUp="passwdBox_KeyUp" PasswordChanged="passwdBox_PasswordChanged"/>
             <TextBox x:Name="randBox" Margin="8" TextWrapping="Wrap" Grid.Row="3" PlaceholderText="验证码" KeyUp="randBox_KeyUp"/>
             <Image x:Name="randImage" Margin="8" Tapped="image_Tapped" Grid.Row="3" Grid.Column="1"/>
+            <HyperlinkButton x:Name="randResetButton" Margin="8,0" Content="重新加载验证码" Grid.Row="3" Grid.Column="1" Visibility="Collapsed" Click="randResetButton_Click" />
+            <TextBlock x:Name="randLoadingHint" Margin="8,0" Text="验证码加载中…" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center"/>
             <CheckBox x:Name="rememberMeCheckBox" Grid.Row="4" Margin="8" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Content="记住密码" />
+            <HyperlinkButton x:Name="forgetMeButton" Content="忘记我" Grid.Row="4" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.ColumnSpan="2" Margin="8,0" Visibility="Collapsed" Click="forgetMeButton_Click"/>
             <Button x:Name="loginButton" Content="Login" HorizontalAlignment="Stretch" Margin="8" VerticalAlignment="Top" Click="loginButton_Click" Grid.Row="5" Grid.ColumnSpan="2"/>
             <TextBlock x:Name="statusBlock" TextWrapping="Wrap" Grid.Row="6" Margin="12"/>
             <ProgressRing x:Name="progressRing" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.RowSpan="7" Width="50" Height="50" Grid.ColumnSpan="2"/>
