--- a/EcardQuery/HistoryInquiryPage.xaml
+++ b/EcardQuery/HistoryInquiryPage.xaml
@@ -55,10 +55,9 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <ComboBox x:Name="accountPicker" ItemsSource="{Binding}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.ColumnSpan="2" Margin="8" />
-            <CalendarDatePicker x:Name="startDatePicker" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="8" PlaceholderText="开始日期" Grid.Row="1"/>
-            <CalendarDatePicker x:Name="endDatePicker" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="1" Margin="8" PlaceholderText="结束日期" Grid.Row="1"/>
+            <CalendarDatePicker x:Name="startDatePicker" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="8" PlaceholderText="开始日期" Grid.Row="1" Header="开始日期"/>
+            <CalendarDatePicker x:Name="endDatePicker" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="1" Margin="8" PlaceholderText="结束日期" Grid.Row="1" Header="结束日期"/>
             <Button x:Name="submitButton" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Row="2" Content="查询" Grid.ColumnSpan="2" Margin="8" Click="submitButton_Click" />
-            <TextBlock x:Name="statusBlock" Grid.Row="3" Grid.ColumnSpan="2" Margin="12,12,12,12" />
             <Button x:Name="expressButton1" Grid.Row="4" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="8" Content="查询过去7天" Click="expressButton1_Click" />
             <Button x:Name="expressButton2" Grid.Row="4" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="8" Content="查询过去30天" Grid.Column="1" Click="expressButton2_Click" />
             <ad:AdControl Grid.Row="5" Grid.ColumnSpan="2" VerticalAlignment="Center" AdUnitId="11554055" ApplicationId="debec3ba-2069-4791-9fd9-fe0a1e117e8f" Width="300" Height="250" HorizontalAlignment="Center" />
