--- a/EcardQuery/TranscationDisplayList.xaml
+++ b/EcardQuery/TranscationDisplayList.xaml
@@ -9,8 +9,9 @@
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
-
+    
     <UserControl.Resources>
+        <CollectionViewSource x:Name="cvs1" IsSourceGrouped="True" />
         <local:ColorConverter x:Key="ColorValueConverter"/>
     </UserControl.Resources>
     <Grid>
@@ -18,9 +19,19 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <ListView x:Name="displayList" ItemsSource="{Binding}" HorizontalAlignment="Center" >
+        <ListView x:Name="displayList" ItemsSource="{x:Bind cvs1.View}"  HorizontalAlignment="Center">
+            <ListView.GroupStyle>
+                <GroupStyle >
+                    <GroupStyle.HeaderTemplate>
+                        <DataTemplate x:DataType="local:TranscationGroup">
+                            <TextBlock Text="{x:Bind Key}" 
+                                       Style="{ThemeResource TitleTextBlockStyle}"/>
+                        </DataTemplate>
+                    </GroupStyle.HeaderTemplate>
+                </GroupStyle>
+            </ListView.GroupStyle>
             <ListView.ItemTemplate>
-                <DataTemplate>
+                <DataTemplate x:DataType="local:TranscationData">
                     <Grid Margin="0,2">
                         <Grid ScrollViewer.VerticalScrollBarVisibility="Disabled" HorizontalAlignment="Center">
                             <Grid.ColumnDefinitions>
@@ -32,11 +43,11 @@
                                 <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
                             <Rectangle Width="400" Grid.ColumnSpan="2" />
-                            <TextBlock Text="{Binding Time}" HorizontalAlignment="Left" VerticalAlignment="Stretch" FontSize="20" />
-                            <TextBlock Text="{Binding SubSystem}" HorizontalAlignment="Left" VerticalAlignment="Stretch" FontSize="11" Grid.Row="1" />
-                            <TextBlock Text="{Binding Delta}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" FontSize="20" Grid.Column="1" 
-                                       Foreground="{Binding Delta, Converter={StaticResource ResourceKey=ColorValueConverter}}" TextAlignment="Right"/>
-                            <TextBlock Text="{Binding AccountBalance}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" FontSize="11" Grid.Column="1" Grid.Row="1" TextAlignment="Right" />
+                            <TextBlock Text="{x:Bind Time}" HorizontalAlignment="Left" VerticalAlignment="Stretch" FontSize="20" />
+                            <TextBlock Text="{x:Bind SubSystem}" HorizontalAlignment="Left" VerticalAlignment="Stretch" FontSize="11" Grid.Row="1" />
+                            <TextBlock Text="{x:Bind Delta}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" FontSize="20" Grid.Column="1" 
+                                       Foreground="{x:Bind Delta, Converter={StaticResource ResourceKey=ColorValueConverter}}" TextAlignment="Right"/>
+                            <TextBlock Text="{x:Bind AccountBalance}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" FontSize="11" Grid.Column="1" Grid.Row="1" TextAlignment="Right" />
                         </Grid>
                     </Grid>
                 </DataTemplate>
