把分组的标题换成了超链接按钮。

--- a/EcardQuery/TranscationDisplayList.xaml
+++ b/EcardQuery/TranscationDisplayList.xaml
@@ -37,7 +37,9 @@
         </DataTemplate>
 
         <DataTemplate x:Key="GroupHeaderTemplate" x:DataType="local:TranscationGroup">
-            <TextBlock Text="{x:Bind Key}" Style="{ThemeResource TitleTextBlockStyle}"/>
+            <HyperlinkButton>
+                <TextBlock Text="{x:Bind Key}" Style="{ThemeResource TitleTextBlockStyle}"/>
+            </HyperlinkButton>
         </DataTemplate>
 
         <DataTemplate x:Key="ZoomedOutTemplate" x:DataType="wuxdata:ICollectionViewGroup">
