Revert "添加了查询页面内的过渡动画。"
This reverts commit 959fab9672b14ed4cdadc5522dbd590eccac7388.

--- a/EcardQuery/HistoryInquiryPage.xaml
+++ b/EcardQuery/HistoryInquiryPage.xaml
@@ -19,15 +19,13 @@
     </Page.Transitions>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
         <VisualStateManager.VisualStateGroups>
-            <VisualStateGroup x:Name="widthStates" CurrentStateChanged="widthStates_CurrentStateChanged">
+            <VisualStateGroup CurrentStateChanging="VisualStateGroup_CurrentStateChanging">
                 <VisualState x:Name="wideState">
                     <VisualState.StateTriggers>
                         <AdaptiveTrigger MinWindowWidth="600" />
                     </VisualState.StateTriggers>
                 </VisualState>
-
                 <VisualState x:Name="narrowState">
                     <VisualState.Setters>
                         <Setter Target="gridColumn1.Width" Value="0" />
@@ -38,43 +36,7 @@
                     </VisualState.StateTriggers>
                 </VisualState>
             </VisualStateGroup>
-
-            <VisualStateGroup x:Name="panelStates">
-                <VisualStateGroup.Transitions>
-
-                    <VisualTransition From="dataState" GeneratedDuration="0" To="controlState">
-                        <Storyboard>
-                            <DrillOutThemeAnimation EntranceTargetName="controlPanel" 
-                                                    ExitTargetName="displayList" />
-                        </Storyboard>
-                    </VisualTransition>
-
-                    <VisualTransition From="controlState" GeneratedDuration="0" To="dataState">
-                        <Storyboard>
-                            <DrillInThemeAnimation EntranceTargetName="displayList" 
-                                                   ExitTargetName="controlPanel" />
-                        </Storyboard>
-                    </VisualTransition>
-
-                </VisualStateGroup.Transitions>
-
-                <VisualState x:Name="controlState" >
-                    <VisualState.Setters>
-                        <Setter Target="displayList.(UIElement.Visibility)" Value="Collapsed"/>
-                    </VisualState.Setters>
-                </VisualState>
-
-                <VisualState x:Name="dataState">
-                    <VisualState.Setters>
-                        <Setter Target="controlPanel.(UIElement.Visibility)" Value="Collapsed"/>
-                    </VisualState.Setters>
-                </VisualState>
-
-                <VisualState x:Name="splitState"></VisualState>
-            </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
-        
-        
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*" MaxWidth="600" />
             <ColumnDefinition x:Name="gridColumn1" Width="3*" />
@@ -100,6 +62,6 @@
             <Button x:Name="expressButton2" Grid.Row="4" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="8" Content="查询过去30天" Grid.Column="1" Click="expressButton2_Click" />
             <ad:AdControl Grid.Row="5" Grid.ColumnSpan="2" VerticalAlignment="Center" AdUnitId="11554055" ApplicationId="debec3ba-2069-4791-9fd9-fe0a1e117e8f" Width="300" Height="250" HorizontalAlignment="Center" />
         </Grid>
-        <local:TranscationDisplayList x:Name="displayList" Grid.Column="1" />
+        <local:TranscationDisplayList x:Name="displayList" Grid.Column="1" Visibility="Collapsed" />
     </Grid>
 </Page>
